doc: update api document
