# backend/src/routes/modules/carts-route.js
@@ -1,16 +1,15 @@
 const router = require('express').Router()
 const cartController = require('../../controllers/cart-controller')
 
-router.post('/:productId', cartController.postCartItem)
-
 router
-  .route('/:id')
+  .route('/:cartItemId')
   .patch(cartController.updateCartItem)
   .delete(cartController.deleteCartItem)
 
 router
   .route('/')
   .get(cartController.getCartItems)
+  .post(cartController.postCartItem)
   .patch(cartController.updateCartStatus)
 
 module.exports = router
